--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -173,5 +173,22 @@
             "account": "계정",
             "command": "명령어"
         }
+    },
+    "welcome": {
+        "title": "DH 콘솔에 오신 것을 환영합니다!",
+        "subtitle": "당신의 강력한 도구, 단헝 서버 관리",
+        "important": "중요: 시작하기 전에",
+        "plugin": {
+            "title": "1. 필요한 플러그인을 YourPSPath/Plugins에 설치",
+            "button": "DHConsole 명령어 플러그인 받기"
+        },
+        "updates": {
+            "title": "2. 최신 업데이트 받기",
+            "button": "DHConsole 리포지토리 방문"
+        },
+        "docs": {
+            "text": "자세한 설정 지침은 다음을 방문하십시오",
+            "link": "문서"
+        }
     }
 }
