--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -173,5 +173,22 @@
             "account": "Аккаунт",
             "command": "Команда"
         }
+    },
+    "welcome": {
+        "title": "Добро пожаловать в консоль DH!",
+        "subtitle": "Ваш мощный инструмент для управления сервером Danheng",
+        "important": "Важно: Перед началом",
+        "plugin": {
+            "title": "1. Установите необходимый плагин в YourPSPath/Plugins",
+            "button": "Получить плагин команд DHConsole"
+        },
+        "updates": {
+            "title": "2. Получите последние обновления",
+            "button": "Посетить репозиторий DHConsole"
+        },
+        "docs": {
+            "text": "Для получения подробных инструкций по настройке, пожалуйста, посетите",
+            "link": "документацию"
+        }
     }
 }
