--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -173,5 +173,22 @@
             "account": "บัญชี",
             "command": "คำสั่ง"
         }
+    },
+    "welcome": {
+        "title": "ยินดีต้อนรับสู่ DH คอนโซล!",
+        "subtitle": "เครื่องมือที่ทรงพลังสำหรับการจัดการเซิร์ฟเวอร์ Danheng ของคุณ",
+        "important": "สำคัญ: ก่อนที่คุณจะเริ่ม",
+        "plugin": {
+            "title": "1. ติดตั้งปลั๊กอินที่จำเป็นไปยัง YourPSPath/Plugins",
+            "button": "รับปลั๊กอินคำสั่ง DHConsole"
+        },
+        "updates": {
+            "title": "2. รับการอัปเดตล่าสุด",
+            "button": "เยี่ยมชมที่เก็บ DHConsole"
+        },
+        "docs": {
+            "text": "สำหรับคำแนะนำการตั้งค่าโดยละเอียด โปรดเยี่ยมชม",
+            "link": "เอกสาร"
+        }
     }
 }
