add more commands

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -189,6 +189,29 @@
         "docs": {
             "text": "For detailed setup instructions, please visit the",
             "link": "documentation"
+        },
+        "gettingStarted": {
+            "title": "If you are a first time user",
+            "step0": {
+                "title": "Step 0: Setup DanhengServer",
+                "description": "If you are not sure how to set up DanhengServer, refer to"
+            },
+            "step1": {
+                "title": "Step 1: Launch Required Programs",
+                "description": "Run `DanhengServer.exe` and `Fiddler Classic`"
+            },
+            "step2": {
+                "title": "Step 2: Create Account",
+                "description": "Create your account in terminal using:"
+            },
+            "step3": {
+                "title": "Step 3: Game Login",
+                "description": "Launch the game and log in with your created account"
+            },
+            "step4": {
+                "title": "Step 4: Connect DHConsole to DanhengServer",
+                "description": "Click the \"Connect\" button in the top right corner of DHConsole"
+            }
         }
     }
 }
