--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -189,6 +189,29 @@
         "docs": {
             "text": "Для получения подробных инструкций по настройке, пожалуйста, посетите",
             "link": "документацию"
+        },
+        "gettingStarted": {
+            "title": "Если вы используете впервые",
+            "step0": {
+                "title": "Шаг 0: Настройка DanhengServer",
+                "description": "Если вы не уверены, как настроить DanhengServer, обратитесь к"
+            },
+            "step1": {
+                "title": "Шаг 1: Запуск необходимых программ",
+                "description": "Запустите `DanhengServer.exe` и `Fiddler Classic`"
+            },
+            "step2": {
+                "title": "Шаг 2: Создание аккаунта",
+                "description": "Создайте свой аккаунт в терминале, используя:"
+            },
+            "step3": {
+                "title": "Шаг 3: Вход в игру",
+                "description": "Запустите игру и войдите с созданным аккаунтом"
+            },
+            "step4": {
+                "title": "Шаг 4: Подключение DHConsole к DanhengServer",
+                "description": "Нажмите кнопку \"Подключить\" в правом верхнем углу DHConsole"
+            }
         }
     }
 }
