--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -189,6 +189,29 @@
         "docs": {
             "text": "สำหรับคำแนะนำการตั้งค่าโดยละเอียด โปรดเยี่ยมชม",
             "link": "เอกสาร"
+        },
+        "gettingStarted": {
+            "title": "หากคุณเป็นผู้ใช้ครั้งแรก",
+            "step0": {
+                "title": "ขั้นตอนที่ 0: ตั้งค่า DanhengServer",
+                "description": "หากคุณไม่แน่ใจว่าจะตั้งค่า DanhengServer อย่างไร ให้ดูที่"
+            },
+            "step1": {
+                "title": "ขั้นตอนที่ 1: เปิดโปรแกรมที่จำเป็น",
+                "description": "รัน `DanhengServer.exe` และ `Fiddler Classic`"
+            },
+            "step2": {
+                "title": "ขั้นตอนที่ 2: สร้างบัญชี",
+                "description": "สร้างบัญชีของคุณในเทอร์มินัลโดยใช้:"
+            },
+            "step3": {
+                "title": "ขั้นตอนที่ 3: เข้าสู่ระบบเกม",
+                "description": "เปิดเกมและเข้าสู่ระบบด้วยบัญชีที่คุณสร้าง"
+            },
+            "step4": {
+                "title": "ขั้นตอนที่ 4: เชื่อมต่อ DHConsole กับ DanhengServer",
+                "description": "คลิกปุ่ม \"เชื่อมต่อ\" ที่มุมขวาบนของ DHConsole"
+            }
         }
     }
 }
