--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -189,6 +189,29 @@
         "docs": {
             "text": "Pour des instructions détaillées de configuration, veuillez visiter la",
             "link": "documentation"
+        },
+        "gettingStarted": {
+            "title": "Si vous êtes un nouvel utilisateur",
+            "step0": {
+                "title": "Étape 0 : Configurer DanhengServer",
+                "description": "Si vous ne savez pas comment configurer DanhengServer, consultez"
+            },
+            "step1": {
+                "title": "Étape 1 : Lancer les programmes requis",
+                "description": "Exécutez `DanhengServer.exe` et `Fiddler Classic`"
+            },
+            "step2": {
+                "title": "Étape 2 : Créer un compte",
+                "description": "Créez votre compte dans le terminal en utilisant :"
+            },
+            "step3": {
+                "title": "Étape 3 : Connexion au jeu",
+                "description": "Lancez le jeu et connectez-vous avec votre compte créé"
+            },
+            "step4": {
+                "title": "Étape 4 : Connecter DHConsole à DanhengServer",
+                "description": "Cliquez sur le bouton \"Connecter\" dans le coin supérieur droit de DHConsole"
+            }
         }
     }
 }
