--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -40,7 +40,11 @@
                 "plus": "+"
             },
             "actions": {
-                "saveAll": "Сохранить все реликвии"
+                "saveAll": "Сохранить все реликвии",
+                "recommend": "Получить рекомендуемые реликвии"
+            },
+            "hints": {
+                "recommendEdit": "Включите режим редактирования, чтобы получить рекомендуемые реликвии"
             },
             "errors": {
                 "saveFailed": "Не удалось сохранить реликвии",
