--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -40,7 +40,11 @@
                 "plus": "+"
             },
             "actions": {
-                "saveAll": "บันทึกวัตถุโบราณทั้งหมด"
+                "saveAll": "บันทึกวัตถุโบราณทั้งหมด",
+                "recommend": "รับวัตถุโบราณที่แนะนำ"
+            },
+            "hints": {
+                "recommendEdit": "เข้าสู่โหมดแก้ไขเพื่อรับวัตถุโบราณที่แนะนำ"
             },
             "errors": {
                 "saveFailed": "การบันทึกวัตถุโบราณล้มเหลว",
